Bugfix: fix calendar cell display printing/wrapping

--- a/css/print/print-common-landscape.css
+++ b/css/print/print-common-landscape.css
@@ -38,6 +38,8 @@
 
   .mcneese .calendar-month-wrapper > .calendar-month > .calendar-body-wrapper > .calendar-body > .calendar-week-wrapper > .calendar-week > .calendar-day-wrapper > .calendar-day {
     min-height: 96px;
+
+    max-width: 132px;
   }
 
   .mcneese .calendar-month-wrapper > .calendar-month > .calendar-body-wrapper > .calendar-body > .calendar-week-wrapper > .calendar-week > .calendar-day-wrapper > .calendar-day > .calendar-item {
